# RAG

./: Makefile  README.md  pyproject.toml  student.py
src/: RAG_pipeline.py  __main__.py  evaluate.py  generator.py  indexer.py  models.py  reader.py  retriever.py  test.py
