[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bm25s>=0.3.0",
    "chromadb>=1.5.2",
    "dspy>=3.1.3",
    "fire>=0.7.1",
    "langchain>=1.2.10",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
]
