[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "accelerate",
    "bm25s>=0.3.0",
    "chromadb>=1.5.2",
    "dspy>=3.1.3",
    "fire>=0.7.1",
    "langchain-text-splitters>=1.1.1",
    "pydantic>=2.12.5",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
]
